tests/parsing/smtlib/poly/errors/019_forall_unopened_sorted_var_list_2.psmt2
(set-logic ALL)
(assert (forall ! true))
