tests/parsing/smtlib/poly/errors/019_forall_unopened_sorted_var_list_2.expected
File "tests/parsing/smtlib/poly/errors/019_forall_unopened_sorted_var_list_2.psmt2", line 2, character 16-17:
Error while parsing a term, read the reserved word '!',
      but expected a list of sorted variables, starting with an opening
      parenthesis.
